[package]
name = "fintual"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain       = { version = "0.12" }
strum             = { version = "0.24", features = ["derive"] } # iterate over enums
strum_macros      = { version = "0.24" }
rand              = { version = "0.7.3" }
assert_approx_eq  = { version = "1.1.0" }
